...
  onItemEdit,
  onItemDelete,
  onTogglePurchase,
  onRefresh,
  refreshing,
  disabled,
  emptyState,
  onClearAllPurchased,
  onSwipeableWillOpen,
  onSwipeableClose,
  purchasedSectionExpanded,
  onPurchasedSectionExpandedChange,
}) => {
...
